<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 Acoustic, L.P. All rights reserved.

  NOTICE: This file contains material that is confidential and proprietary to
  Acoustic, L.P. and/or other developers. No license is granted under any intellectual or
  industrial property rights of Acoustic, L.P. except as may be provided in an agreement with
  Acoustic, L.P. Any unauthorized copying or distribution of content from this file is
  prohibited.
-->
<resources>
    <string name="app_name">DarkHoloAuto</string>
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="textView">TextView</string>
    <string name="largeText">Large Text</string>
    <string name="mediumText">Medium Text</string>
    <string name="smallText">Small Text</string>
    <string name="button">Button</string>
    <string name="coumpoundButton">Coumpound Button</string>
    <string name="imageButtonDesc">Image button displayed</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="checkBox">CheckBox</string>
    <string name="radioButton">RadioButton</string>
    <string name="radioButton1">RadioButton1</string>
    <string name="radioButton2">RadioButton2</string>
    <string name="radioButton3">RadioButton3</string>
    <string name="typeInputTest">Type input test</string>
    <string name="autoCompleteTextView">AutoCompleteTextView</string>
    <string name="multiAutoCompleteTextView">MultiAutoCompleteTextView</string>
    <string name="imageView">ImageView</string>
    <string name="imageButton">ImageButton</string>
    <string name="chronometer">Chronometer</string>
    <string name="digitalClock">DigitalClock</string>
    <string name="primary">Primary</string>
    <string name="hint">Hint</string>

    <string name="alert1">Auto-Generated Alert Dialog</string>
    <string name="alert2">User-Generated Alert Dialog</string>
    <string name="alertWithList">List Contained Alert Dialog</string>
    <string name="alertWithCustomContent">Custom Content Alert Dialog</string>
    <string name="logDialogFragment">Log Dialog Fragment</string>
    <string name="alertTitle">Example Alert</string>
    <string name="alertTitleList">Choose a Planet</string>
    <string name="alertMessage1">Alert 1 Button</string>
    <string name="alertMessage2">Alert 2 Button</string>

    <string name="productDesc">Product</string>
    <string name="itemName">Item Name</string>

    <string name="custom_dialog_fragment">Custom Dialog Fragment</string>
    <string name="custom_dialog_fragment_label1">label1</string>
    <string name="custom_dialog_fragment_label2">label2</string>

    <string name="bottom_sheet_fragment">Bottom Sheet Fragment</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>

    <string name="nav_drawer_menu_item_time">Date and Time</string>
    <string name="nav_drawer_menu_item_landing">Home</string>
    <string name="nav_drawer_menu_item_alerts">Alert Dialog</string>
    <string name="nav_drawer_menu_open">Open</string>
    <string name="nav_drawer_menu_close">Close</string>

</resources>
