<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2018 Acoustic, L.P. All rights reserved.

  NOTICE: This file contains material that is confidential and proprietary to
  Acoustic, L.P. and/or other developers. No license is granted under any intellectual or
  industrial property rights of Acoustic, L.P. except as may be provided in an agreement with
  Acoustic, L.P. Any unauthorized copying or distribution of content from this file is
  prohibited.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/alertButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alert1"/>
        <Button
            android:id="@+id/alertButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alert2"/>
        <Button
            android:id="@+id/alertButtonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alertWithList"/>
        <Button
            android:id="@+id/alertButtonCustomContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alertWithCustomContent"/>
        <Button
            android:id="@+id/dialogFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/custom_dialog_fragment"/>
        <Button
            android:id="@+id/bottomSheetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/buttonBackground"
            android:text="@string/bottom_sheet_fragment"/>
    </LinearLayout>
</ScrollView>
